# ophis

./: .dockerignore  .eslintrc.cjs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  formspree.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  gitleaks.toml
apps/backend/crates/rate-limit/: Cargo.toml
apps/backend/crates/rate-limit/src/: lib.rs
apps/backend/crates/retry-helper/: Cargo.toml
apps/backend/crates/retry-helper/src/: lib.rs
audit/: audit-report-2026-05-13.md  audit-report-2026-05-14.md  clear-signing-assessment-2026-05-13.md  contracts-osv-baseline.json  contracts-yarn-audit-baseline.json  frontend-op-mainnet-review-2026-05-14.md  kyberswap-review-2026-05-13.md  slither-baseline.json
contracts/: .gitignore  .greg-build-notes.md  .greg-upstream  PROPERTIES.md  echidna.yaml  foundry.toml  hardhat-megaeth.config.ts  medusa.json  networks.json  node_modules  package.json  pnpm-lock.yaml
functions/: _middleware.ts
infra/: tier1-finish.sh  tier1-pk-isolation-rollback.sh  tier1-pk-isolation-setup.sh
scripts/: check-agent-skills-invariant.mjs  check-erpc-id-collisions.sh  check-floor-invariant.sh  check-infra-compose-security.py  check-partner-fee-invariant.sh  check-policy-pack-addresses.mjs  check-tier-invariant.sh  contracts-audit-gate.py  indexnow-ping.mjs  osv-gate.py  slither-baseline.py  test-agent-skills.mjs  test-functions.mjs  vercel-build.sh
v2-core/: .greg-upstream
v2-periphery/: .greg-upstream
(+1587 files in other folders)
