[package]
name = "rate-limit"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
configs = { workspace = true }
futures = { workspace = true }
humantime-serde = { workspace = true }
observe = { workspace = true }
poison-recovery = { workspace = true }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [] }
tracing = { workspace = true }

[dev-dependencies]
# `configs::rate_limit::Strategy` cfg-gates its `Serialize` derive on
# `cfg(test)` of the configs crate + `feature = "test-util"`. When
# rate-limit's tests build, configs isn't built with cfg(test), so
# `serde_roundtrip` couldn't compile without this dev-dep.
configs = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }

[features]
test-util = []

[lints]
workspace = true
